<resources>
    <string name="app_name">StoryAppDicoding</string>
    <string name="story_image">Story Image</string>
    <string name="welcome_story">Welcome to Dicoding Story</string>
    <string name="intro_story">Share all your stories here to share experiences, perspectives, and life stories that can inspire others. No story is too small or too big—every story has its own value. Together, let’s listen, understand, and learn from each other’s life journeys. Ready to share your story?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_login">Ready to share your story?</string>
    <string name="intro_login">Please enter your data first</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="error">Error</string>
    <string name="galery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="title_detail">Title Detail</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout Confirmation</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="sure">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_image">No images are recorded</string>
    <string name="no_gallery">No image selected</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="share_my_location">Share My Location</string>
</resources>