<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:contentDescription="@string/story_image"
        android:src="@drawable/story_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_story"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/img_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/intro_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_story"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@id/intro_story"
        app:layout_constraintTop_toBottomOf="@+id/intro_story" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintStart_toEndOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/intro_story"
        app:layout_constraintTop_toBottomOf="@+id/intro_story" />


</androidx.constraintlayout.widget.ConstraintLayout>